tests/negative/dup_sanction.veldanava
Primordial_Regalia;

Sanction:
    plus;
    plus;
;
